# Visual

./: .gitignore  README.md  TODO.md  minify.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-tests.yml
src/visual/: __init__.min.py  visual.min.py  visual.py
src/visual/examples/functions/notebooks/: visuel_example.ipynb
src/visual/extensions/ellipses/: __init__.min.py  ellipses_example.min.py  ext_ellipses.min.py
src/visual/extensions/grapher/: __init__.min.py  ext_grapher.min.py
src/visual/extensions/grapher/notebooks/: grapher_example.ipynb
src/visual/extensions/lines/: __init__.min.py  ext_lines.min.py  lines_example.min.py
src/visual/extensions/turtle/: __init__.min.py  ext_turtle.min.py  ext_turtle_for_computer.min.py  turtle_example.min.py
